--- a/packages/blitoadz-webapp/netlify.toml
+++ b/packages/blitoadz-webapp/netlify.toml
@@ -3,6 +3,9 @@
   to = "/index.html"
   status = 200
 
+[build]
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../blitoadz-contracts"
+
 [context.production]
   environment = { REACT_APP_CHAIN_ID = "1", REACT_APP_NETWORK = "mainnet" }
 
