Update toadz palette with manual inputs

--- a/packages/blitoadz-image-processing/dvc.yaml
+++ b/packages/blitoadz-image-processing/dvc.yaml
@@ -5,6 +5,9 @@ stages:
     - data/toadz
     - image_processing/parse_png.py
     - image_processing/constants.py
+    - data/toadz_selection
     outs:
     - data/toadz_computed
+    - data/toadz_downscaled
+    - data/toadz_quantized
     - data/palettes.json
