--- a/packages/blitoadz-webapp/.env.example
+++ b/packages/blitoadz-webapp/.env.example
@@ -2,3 +2,4 @@ REACT_APP_CHAIN_ID=4
 REACT_APP_NETWORK=
 REACT_APP_ETHERSCAN_API_KEY=
 REACT_APP_INFURA_PROJECT_ID=
+REACT_APP_BLITMAP_CONTRACT_ADDRESS=
