Add links to FAQ

--- a/packages/blitoadz-webapp/.env.example
+++ b/packages/blitoadz-webapp/.env.example
@@ -3,3 +3,4 @@ REACT_APP_NETWORK=
 REACT_APP_ETHERSCAN_API_KEY=
 REACT_APP_INFURA_PROJECT_ID=
 REACT_APP_BLITMAP_CONTRACT_ADDRESS=
+REACT_APP_OPENSEA_URL=
