--- a/packages/blitoadz-webapp/netlify.toml
+++ b/packages/blitoadz-webapp/netlify.toml
@@ -7,7 +7,7 @@
   ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../blitoadz-contracts"
 
 [context.production]
-  environment = { REACT_APP_CHAIN_ID = "1", REACT_APP_NETWORK = "mainnet", REACT_APP_BLITMAP_CONTRACT_ADDRESS = "0x8d04a8c79cEB0889Bdd12acdF3Fa9D207eD3Ff63" }
+  environment = { REACT_APP_CHAIN_ID = "1", REACT_APP_NETWORK = "mainnet", REACT_APP_BLITMAP_CONTRACT_ADDRESS = "0x8d04a8c79cEB0889Bdd12acdF3Fa9D207eD3Ff63", REACT_APP_OPENSEA_URL = "https://opensea.io/collection/blitoadz" }
 
 [context.staging]
   environment = { REACT_APP_CHAIN_ID = "4", REACT_APP_NETWORK = "rinkeby", REACT_APP_OPENSEA_URL = "https://testnets.opensea.io/collection/blitoadz-v3" }
