--- a/packages/blitoadz-image-processing/pyproject.toml
+++ b/packages/blitoadz-image-processing/pyproject.toml
@@ -15,6 +15,7 @@ Pillow = "^9.0.0"
 dvc = { version = "^2.9.3", extras = ["s3"] }
 boto3 = "1.20.24"
 matplotlib = "^3.5.1"
+svglib = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
